Fixes issue #1611 - Remove --illegal-access flag from Surefire and Failsafe (#1746)